# hestia-shield

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  fly.toml  otel-collector-config.yaml  pyproject.toml  pytest.ini  requirements.txt
docs/: v2.0.0-architecture.md  v2.0.0-vision.md
examples/: autogen_integration.py  langchain_integration.py  plugin_example.py
helm/hestia-shield/: .helmignore  Chart.yaml  values.yaml
hestia/: __init__.py  agent_monitor.py  api.py  attack_memory.py  auth.py  cache.py  classifier.py  config.py  core.py  dashboard.py  db.py  decision_engine.py  metrics.py  models.py  queue.py  rules_engine.py  storage.py  storage_base.py  storage_postgres.py  telemetry.py  utils.py  webhooks.py  worker.py
hestia/alerts/: __init__.py  channels.py  manager.py  rules.py
hestia/federated/: __init__.py  aggregator.py  encoder.py  global_intel.py  (+2 more)
kaggle_agent_security/: attack_agent.py  memory_tracker.py  submission.csv  submission.json
scripts/: build.sh  deploy-fly.sh  test.sh
tests/: conftest.py  test_alerts.py  test_core.py  test_dashboard.py  test_decision_engine.py  test_federated.py  test_federated_integration.py  test_healing.py  test_healing_integration.py  test_integrations_autogen.py  test_integrations_crewai.py  test_integrations_langchain.py  test_memory.py  test_ml.py  test_performance.py  test_performance_v1_2_0.py  test_plugins.py  test_policy.py  test_queue.py  test_telemetry.py  test_webhooks.py
(+49 files in other folders)
