[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hestia-shield"
version = "1.0.0"
description = "Runtime Security for AI Agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Hestia Team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pyjwt>=2.8.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "redis>=4.6.0",
]
redis = ["redis>=4.6.0"]
otel = [
    "opentelemetry-distro>=0.43b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
]

[project.scripts]
hestia-api = "hestia.api:app"

[project.urls]
Homepage = "https://github.com/hestia-shield/hestia"

[tool.setuptools.packages.find]
include = ["hestia*"]